--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "devtool": "react-devtools",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -15,6 +16,7 @@
     "@react-navigation/stack": "^5.14.3",
     "apsl-react-native-button": "^3.1.1",
     "react": "17.0.1",
+    "react-devtools": "^4.10.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.0.0",
