--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "devtool": "react-devtools",
+    "devrelease": "devrelease.sh",
+    "prodrelease": "prodrelease.sh",
     "test": "jest",
     "lint": "eslint ."
   },
